--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -14,3 +14,134 @@ body {
     font-family: 'Sora', sans-serif;
     line-height: 1.3;
 }
+
+
+//application form 
+.form-section{
+    max-width: 960px;
+    margin-left: 16px;
+}
+
+.input-field input{
+    width: 345px;
+    height: 50px;
+    background-color: lightgray;
+    border: none;
+    border-radius: 5px;
+}
+.input-field input::placeholder{
+    color: $blackishText;
+}
+
+.input-field input:not(:last-child){
+    margin-bottom: 12px;
+}
+
+.input-field input:focus{
+    outline: none !important;
+    border:1px solid $borderColor;
+}
+
+.radio-gender label{
+    margin-left: -20px;
+}
+.radio-gender input{
+    height: 18px;
+    width: 18px;
+}
+
+.radio-gender input:not(:last-child){
+    margin-right: 30px;
+}
+
+.drop-down select{
+    width: 345px;
+    height: 50px;
+    margin-top: 30px;
+    background-color: lightgray;
+    border: none;
+    border-radius: 5px;
+}
+
+.drop-down select:last-child{
+    margin-top: 12px;
+}
+
+.drop-down select::placeholder{
+    color: $blackishText;
+}
+
+//desktop left-side design
+.left-side{
+    left: 0;
+    width: 960px;
+    height: 1080px;
+}
+.left-side .images{
+    left: 0px;
+    position: absolute;
+}
+
+.left-side img{
+    position: relative;
+}
+
+// desktop right section
+
+.right-side{
+    float: right;
+    width: 960px;
+    height: 1080px;
+}
+
+
+//Button
+
+button, .button{
+    margin-top: 28px;
+    padding: 1.25rem 2.25rem;
+    font-family: 'Sora', sans-serif;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+    background: linear-gradient(to right,$bluishColor, $borderColor);
+    color: white;
+}
+
+
+
+//Flexbox
+.flex{
+    display: flex;
+    &-jc-sb{
+        justify-content: space-between;
+    }
+
+    &-jc-c{
+        justify-content: center;
+    }
+
+    &-ai-c{
+        align-items: center;
+    }
+}
+
+// Visibility
+.hide-for-mobile{
+    // hide for tablet and mobile
+    @include breakpoint-down(medium){
+        display: none;
+    }
+}
+
+.hide-for-desktop{
+    @include breakpoint-up(large){
+        display: none;
+    }
+}
+
+.logo-color-change{
+    @include breakpoint-up(large){
+        color: white;
+    }
+}
